마을 리더용 출석 정보 관리 기능 구현
